src/objects/TestObj__c.object
<CustomObject>
    <fields>
        <fullName>A2__c</fullName>
        <label>A2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TestObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B2__c</fullName>
        <label>B2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <label>Credit Card #</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FormulaField__c</fullName>
        <formula>CASE(TEXT(Product_Type__c)+TEXT(Support__c), &apos;PS95Y1Labour&apos;, &apos;Labour text&apos;, &apos;PS95Y1Material&apos;, &apos;Material text&apos;,&apos;&apos;)</formula>
        <label>FormulaField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>TestObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lookup_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TestObjs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS95Y1</fullName>
                </value>
                <value>
                    <fullName>PS247Y1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Labour</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test2obj__c</fullName>
        <label>Test2obj</label>
        <referenceTo>Test2obj__c</referenceTo>
        <relationshipName>TestObjs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tttyyy__c</fullName>
        <label>tttyyy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Test Obj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>